services/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: app
          image: verseghy/website_backend
          ports:
            - containerPort: 8181
          imagePullPolicy: Always
      volumes:
        - name: backend-persistent-storage
          persistentVolumeClaim:
            claimName: backend-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  selector:
    app: backend
  ports:
    - name: backend
      protocol: TCP
      port: 80
      targetPort: 8181
