services/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ingress
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    kubernetes.io/ingress.class: "public"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
    - host: verseghy-gimnazium.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-ssr-svc
                port:
                  number: 80
    - host: verseghy-gimnazium.net
      http:
        paths:
            - path: /(docs|images)/
              pathType: Prefix
              backend:
                service:
                  name: static-svc
                  port:
                    number: 80
    - host: backend.verseghy-gimnazium.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 80
  tls:
    - hosts:
        - verseghy-gimnazium.net
        - backend.verseghy-gimnazium.net
      secretName: verseghy-gimnazium-net-tls
